--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 **/[Tt]est*
-.vscode/
+!test1.c
+
 # *.jpg
 # *.png
 # *.mp4
-
 *.zip
 
 img/**/*.txt
@@ -15,6 +15,8 @@ assignments/**/*.mp4
 in_class/**/*.jpg
 in_class/**/*.png
 in_class/**/*.mp4
+
+.vscode/
 
 # Prerequisites
 *.d
